--- a/wp-content/themes/verde-ghaia-3.0/assets/css/vg-styles.css
+++ b/wp-content/themes/verde-ghaia-3.0/assets/css/vg-styles.css
@@ -1529,6 +1529,46 @@ h2.comments-title{
 }
 /* / */
 
+/* click whatsapp */
+	.click-wpp{
+	    position: fixed;
+	    z-index: 1000;
+	    bottom: 20px;
+	    left: 20px;
+	    width: 50px;
+	    height: 50px;
+	    -webkit-border-radius: 50%;
+	    cursor: pointer;
+	    background-color: #0ba360;
+	    transition: .3s;
+	    background-position: center;
+	    background-repeat: no-repeat;
+	    background-image: url(../imagens/whatsapp-logo-32x32.png);
+	    background-size: 50% auto;
+	}
+	.click-wpp::after, .click-wpp::before {
+	    content: '';
+	    position: absolute;
+	    opacity: 0;
+	    border: 4px solid #0ba360;
+	    left: -10px;
+	    top: -10px;
+	    right: -10px;
+	    bottom: -10px;
+	    -webkit-border-radius: 50%;
+	    animation: WaveWhatsApp 1.5s ease infinite;
+	}
+	.click-wpp:hover{background-color: #15cc74;}
+	.click-wpp:hover::after{border: 4px solid #15cc74;}
+	.click-wpp:hover::before{border: 4px solid #15cc74;}
+	.click-wpp::after {
+    	animation-delay: .5s;
+	}
+	@keyframes WaveWhatsApp {0%{ transform: scale(0.5); } 50%{ opacity: 1; } 100%{ transform: scale(1.2); opacity: 0; }}
+	.click-wpp img{float: left;}
+	.click-wpp div{padding: 10px 0 10px 40px;}
+	/* / */
+
 /* MEDIA QUERY */
 /* desktop*/
 @media only screen and (min-width: 992px) {
@@ -1629,23 +1669,6 @@ h2.comments-title{
 	  	right: 0;
 	  	margin: 0 auto;
 	}
-	/* click whatsapp */
-	.click-wpp{
-	    position: fixed;
-	    width: 200px;
-	    left: 15px;
-	    bottom: 15px;
-	    font-size: 12px;
-	    background: #f2f2f2;
-	    border: 1px solid #dcdcdc;
-	    padding: 3px;
-	    border-radius: 30px;
-	    z-index: 999;
-	    cursor: pointer;
-	}
-	.click-wpp img{float: left;}
-	.click-wpp div{padding: 10px 0 10px 40px;}
-	/* / */
 	/* one signal */
 	#onesignal-bell-container.onesignal-reset.onesignal-bell-container-bottom-left{
 		bottom: auto!important;
@@ -1664,10 +1687,4 @@ h2.comments-title{
   .fix-header{height: 77px}
   .p-t-c{padding-top: 50px;}
   .p-b-c{padding-bottom: 50px;}
-  .click-wpp-mob{
-  	position: fixed;
-  	left: 15px;
-	bottom: 15px;
-	z-index: 999;
-  }
 }
