--- a/wp-content/themes/verde-ghaia-3.0/assets/css/vg-styles.css
+++ b/wp-content/themes/verde-ghaia-3.0/assets/css/vg-styles.css
@@ -340,7 +340,8 @@ a.excerpt-read-more {
 .banner{position: relative;}
 .align-mid{align-items: center;}
 .f-wrap{flex-wrap: wrap;}
-.l-disc{list-style: disc;}
+.l-disc, .l-disc ul{list-style: disc;}
+.l-disc li{margin-bottom: 15px;}
 /* /MISC */
 
 /* TEXTS */
@@ -1572,6 +1573,7 @@ h2.comments-title{
 	    bottom: -10px;
 	    -webkit-border-radius: 50%;
 	    animation: WaveWhatsApp 1.5s ease infinite;
+	    animation-iteration-count: 5;
 	}
 	.click-wpp:hover{background-color: #15cc74;}
 	.click-wpp:hover::after{border: 4px solid #15cc74;}
