--- a/wp-content/themes/verde-ghaia-3.0/assets/css/vg-styles.css
+++ b/wp-content/themes/verde-ghaia-3.0/assets/css/vg-styles.css
@@ -1966,6 +1966,7 @@ color:#fff
     padding: 10px;
 	}
 	.d-flex-mob{display: flex;}
+	.onesignal-bell-container{display: none;}
 }
 
 /* MEGA MENU */
